tests/negative/gold/static5_test.gold
tests/negative/static5_test.toit:7:10: error: Constructors can't be static
  static constructor:
         ^~~~~~~~~~~
Compilation failed.
